[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://Objects/CombatGrid/OLD/MainMenu/MainMenu.gd" id="1"]
[ext_resource type="Script" path="res://Objects/CombatGrid/OLD/MainMenu/Saves/SaveList.gd" id="2"]
[ext_resource type="Script" path="res://Objects/CombatGrid/OLD/MainMenu/Saves/SaveDisplay.gd" id="3"]
[ext_resource type="Script" path="res://Objects/CombatGrid/OLD/MainMenu/PlayMenu.gd" id="4"]
[ext_resource type="Script" path="res://Objects/CombatGrid/OLD/MainMenu/NewGamePrompt.gd" id="5"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
anchor_right = 0.149
anchor_bottom = 0.092
text = "UI_BACK"

[node name="MainButtons" type="VBoxContainer" parent="." groups=["MAIN"]]
anchor_top = 0.3
anchor_right = 0.394
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Play" type="Button" parent="MainButtons" groups=["MAIN"]]
margin_right = 403.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
text = "UI_MENU_LOADGAME"

[node name="Exit" type="Button" parent="MainButtons" groups=["MAIN"]]
margin_top = 84.0
margin_right = 403.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 80 )
text = "UI_MENU_EXITGAME"

[node name="NewGamePrompt" type="Panel" parent="." groups=["NEW_GAME"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="NameEntry" type="LineEdit" parent="NewGamePrompt" groups=["NEW_GAME"]]
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.4
margin_left = 0.187202
margin_top = 0.135994
margin_right = 0.196808
margin_bottom = 0.143997
max_length = 32
placeholder_text = "Enter name"

[node name="Title" type="Label" parent="NewGamePrompt" groups=["NEW_GAME"]]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.2
text = "UI_SAVE_NAMING"
align = 1

[node name="Warning" type="Label" parent="NewGamePrompt" groups=["NEW_GAME"]]
modulate = Color( 1, 0.756863, 0.756863, 1 )
anchor_left = 0.1
anchor_top = 0.424
anchor_right = 0.9
anchor_bottom = 0.5
text = "UI_WARNING"
align = 1

[node name="Confirm" type="Button" parent="NewGamePrompt" groups=["NEW_GAME"]]
anchor_top = 0.792
anchor_right = 0.5
anchor_bottom = 1.0
text = "UI_CONFIRM"

[node name="Back" type="Button" parent="NewGamePrompt" groups=["NEW_GAME"]]
anchor_left = 0.5
anchor_top = 0.791667
anchor_right = 1.0
anchor_bottom = 1.0
text = "UI_BACK"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayMenu" type="Control" parent="." groups=["START_LOAD"]]
visible = false
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="SaveDisplay" type="Panel" parent="PlayMenu" groups=["START_LOAD"]]
visible = false
anchor_right = 0.5
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Load" type="Button" parent="PlayMenu/SaveDisplay" groups=["START_LOAD"]]
visible = false
anchor_left = 0.1
anchor_top = 0.835
anchor_right = 0.9
anchor_bottom = 0.95
text = "UI_LOAD_SAVE"

[node name="SaveName" type="Label" parent="PlayMenu/SaveDisplay" groups=["START_LOAD"]]
visible = false
anchor_left = 0.35
anchor_top = 0.09
anchor_right = 0.95
anchor_bottom = 0.18
margin_bottom = -0.144005

[node name="SaveIcon" type="TextureRect" parent="PlayMenu/SaveDisplay" groups=["START_LOAD"]]
visible = false
anchor_right = 0.35
anchor_bottom = 0.35

[node name="Saves" type="ScrollContainer" parent="PlayMenu" groups=["START_LOAD"]]
visible = false
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.85
follow_focus = true
scroll_horizontal_enabled = false

[node name="SaveList" type="VBoxContainer" parent="PlayMenu/Saves" groups=["START_LOAD"]]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="NewGame" type="Button" parent="PlayMenu" groups=["START_LOAD"]]
visible = false
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
text = "UI_NEW_GAME"

[connection signal="button_up" from="PlayMenu/SaveDisplay/Load" to="PlayMenu/SaveDisplay" method="_on_Load_button_up"]
[connection signal="save_selected" from="PlayMenu/Saves/SaveList" to="PlayMenu/SaveDisplay" method="_on_save_selected"]
